--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,20 @@
-# test
-APP_ENV=local
+APP_ENV=staging
 
-DB_NAME=dbname
-DB_USER=dbuser
-DB_PASS=dbpass
+DB_NAME=
+DB_USER=
+DB_PASS=
 DB_HOST=127.0.0.1
 DB_CHARSET=utf8
 DB_COLLATE=utf8_general_ci
 DB_PREFIX=wp_
 
-WP_SITEURL=http://localhost
-WP_HOME=http://localhost
+WP_SITEURL=
+WP_HOME=
 
 WP_POST_REVISIONS=false
 WP_DEBUG=true
 WP_DEBUG_LOG=false
 WP_DEBUG_DISPLAY=true
 
-GD_Admin_Email = majid.qureshi@cooperativecomputing.com
-GOOGLE_API_KEY = 
+GD_Admin_Email=
+GOOGLE_API_KEY= 
